[tool.poetry]
name = "honya-bot"
version = "0.1.0"
description = "Honyabot"
authors = ["minamorl <minamorl@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.1"
openai = "^0.27.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
